--- a/css/style.css
+++ b/css/style.css
@@ -1959,6 +1959,7 @@ background-color: rgba(255, 255, 255, 0.8);
   top: 0px;
   z-index: 9999;
   cursor: pointer;
+  margin-top: 20px;
   opacity: 1;
   visibility: hidden;
   padding: 20px;
