--- a/css/style.css
+++ b/css/style.css
@@ -2023,3 +2023,17 @@ background-color: rgba(255, 255, 255, 0.8);
 .js .animate-box {
   opacity: 0;
 }
+
+@media (max-width: 768px) {
+
+  /* Adjust for mobile viewports */
+  #tijender-info-main .desc {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+    margin: 0;
+    text-align: center;
+    /* Optional: center-align text */
+  }
+}
